[package]
name = "stlplus-rs"
version = "0.1.0"
edition = "2021"
description = "Port of the enhanced Seasonal Trend Decomposition using Loess (STL) implementation to rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/nmandery/stlplus-rs"
homepage = "https://github.com/nmandery/stlplus-rs"
keywords = ["timeseries", "stl", "loess"]

[dependencies]
arrow2 = { version = "0.12", optional = true }
num-traits = "0.2"
thiserror = "1"
itertools = "0.10"

[dev-dependencies]
plotters = "0.3"
criterion = { version = "^0.3", features = ["html_reports"] }

[[example]]
name = "crates_io_downloads"

[[bench]]
name = "simple_stl"
harness = false
